# QCodeEditor

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/src/: MainWindow.cpp
src/internal/: QCodeEditor.cpp  QLanguage.cpp  QSyntaxStyle.cpp
